[gd_scene load_steps=19 format=3 uid="uid://cv3ej5ymwd0y3"]

[ext_resource type="Texture2D" uid="uid://3cbk6gtd8pis" path="res://Assets/Icons/NodesIcons/Sentence.svg" id="1_01rho"]
[ext_resource type="Script" path="res://Scripts/SubComponents/Header.gd" id="1_v507a"]
[ext_resource type="Texture2D" uid="uid://cpirwf2kaphk0" path="res://Assets/Icons/NodesIcons/Multiple Choice.svg" id="2_q423w"]
[ext_resource type="Texture2D" uid="uid://duc8w81evfnqw" path="res://Assets/Icons/NodesIcons/DiceRoll.svg" id="3_eet36"]
[ext_resource type="Texture2D" uid="uid://bmfs6iest7723" path="res://Assets/Icons/NodesIcons/Link.svg" id="4_vbwnk"]
[ext_resource type="Texture2D" uid="uid://bsfr18fogqxnt" path="res://Assets/Icons/NodesIcons/Condition.svg" id="5_de2tv"]
[ext_resource type="Texture2D" uid="uid://cii2dk8aqnx3m" path="res://Assets/Icons/NodesIcons/Cog.svg" id="6_7an08"]
[ext_resource type="Texture2D" uid="uid://kqhi8rimv1go" path="res://Assets/Icons/NodesIcons/Exit.svg" id="7_xjmak"]
[ext_resource type="Texture2D" uid="uid://dl3u1xdqd3d66" path="res://Assets/Icons/NodesIcons/Event.svg" id="8_cxodb"]
[ext_resource type="Texture2D" uid="uid://dia7vp7k000po" path="res://Assets/Icons/NodesIcons/Comment.png" id="9_3dogp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3npb4"]
content_margin_left = 5.0
content_margin_top = 3.0
content_margin_right = 5.0
content_margin_bottom = 3.0
bg_color = Color(0.0862745, 0.101961, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0784314, 0.0862745, 0.0980392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 5.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ao7wf"]
content_margin_left = 5.0
content_margin_top = 3.0
content_margin_right = 5.0
content_margin_bottom = 3.0
bg_color = Color(0.0862745, 0.101961, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 5.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_22xm7"]
content_margin_left = 5.0
content_margin_top = 3.0
content_margin_right = 5.0
content_margin_bottom = 3.0
bg_color = Color(0.0859375, 0.101563, 0.125, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 2.0
expand_margin_right = 5.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ux1f6"]
content_margin_left = 0.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 1.0
expand_margin_top = 2.0
expand_margin_right = 1.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knd4m"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.0862745, 0.101961, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r02mm"]
bg_color = Color(0.619608, 0.901961, 0.482353, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_gptd3"]
line_spacing = 0.0
font_size = 12
font_color = Color(0.647059, 0.858824, 0.505882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tyw4k"]
content_margin_left = 7.0
content_margin_right = 7.0
bg_color = Color(0.768627, 0.180392, 0.25098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Header" type="HFlowContainer"]
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 10
script = ExtResource("1_v507a")

[node name="MenuBar" type="MenuBar" parent="."]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/hover = SubResource("StyleBoxFlat_3npb4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ao7wf")
theme_override_styles/normal = SubResource("StyleBoxFlat_22xm7")

[node name="File" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
size = Vector2i(119, 116)
item_count = 5
item_0/text = "Open"
item_1/text = "New"
item_1/id = 1
item_2/id = 2
item_2/separator = true
item_3/text = "Edit Config"
item_3/id = 3
item_4/text = "Test File"
item_4/id = 4

[node name="Add" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
size = Vector2i(119, 247)
item_count = 9
item_0/text = "Sentence"
item_0/icon = ExtResource("1_01rho")
item_1/text = "Choice"
item_1/icon = ExtResource("2_q423w")
item_1/id = 1
item_2/text = "DiceRoll"
item_2/icon = ExtResource("3_eet36")
item_2/id = 2
item_3/text = "Bridge"
item_3/icon = ExtResource("4_vbwnk")
item_3/id = 3
item_4/text = "Condition"
item_4/icon = ExtResource("5_de2tv")
item_4/id = 4
item_5/text = "Action"
item_5/icon = ExtResource("6_7an08")
item_5/id = 5
item_6/text = "EndPath"
item_6/icon = ExtResource("7_xjmak")
item_6/id = 6
item_7/text = "Event"
item_7/icon = ExtResource("8_cxodb")
item_7/id = 7
item_8/text = "Comment"
item_8/icon = ExtResource("9_3dogp")
item_8/id = 8

[node name="Help" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
size = Vector2i(126, 247)
item_count = 1
item_0/text = "Wiki"

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxFlat_ux1f6")

[node name="Save" type="Button" parent="."]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 12
text = "Save"

[node name="SaveProgressContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_bottom = 2

[node name="SaveProgressBar" type="ProgressBar" parent="SaveProgressContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_knd4m")
theme_override_styles/fill = SubResource("StyleBoxFlat_r02mm")
step = 1.0
rounded = true
show_percentage = false

[node name="SaveNotification" type="Label" parent="."]
layout_mode = 2
text = "âœ… SAVED"
label_settings = SubResource("LabelSettings_gptd3")
vertical_alignment = 1

[node name="Timer" type="Timer" parent="SaveNotification"]
wait_time = 1.5
one_shot = true

[node name="TestBtnContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Test" type="Button" parent="TestBtnContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxFlat_tyw4k")
theme_override_styles/normal = SubResource("StyleBoxFlat_tyw4k")
text = "Test"

[connection signal="id_pressed" from="MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="id_pressed" from="MenuBar/Add" to="." method="_on_add_id_pressed"]
[connection signal="id_pressed" from="MenuBar/Help" to="." method="_on_help_id_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="timeout" from="SaveNotification/Timer" to="." method="hide_save_notification"]
[connection signal="pressed" from="TestBtnContainer/Test" to="." method="_on_file_id_pressed" binds= [4]]
